# big-data-project

./: .gitignore  README.md  docker-compose.logstash.yml  docker-compose.yml  export.sh  pyproject.toml
batch-processing/: pom.xml
batch-processing/src/main/java/: Monitor.java
filebeat/: filebeat.yml
flinkwork/: hello.txt  pom.xml
flinkwork/src/main/java/beats/: Agent.java  Ecs.java  Event.java  File.java  FileBeatsData.java  FileBeatsDataDeserializer.java  FileBeatsDataSerializer.java  Fileset.java  Host.java  Input.java  Log.java  Os.java  Service.java
flinkwork/src/main/java/org/example/: DataStreamJob.java
hdfs-writer/: pom.xml
hdfs-writer/src/main/java/: Consumer.java  HDFSWriter.java
hdfs-writer/src/main/resources/: Dockerfile
kafka/: consumer_filebeat.py  consumer_logstash.py  consumer_metricbeat.py  consumer_test.py  load_sample_data.py
logstash/output/: filebeat.json  metricbeat.json
logstash/pipeline/: logstash.conf  logstashbeats.conf
metricbeat/: metricbeat.yml
samples/filebeats/: filebeat.json  temp.json
sparkstream/: Dockerfile  pom.xml
sparkstream/.devcontainer/: devcontainer.json
sparkstream/src/main/java/com/bdp/: App.java  JavaSparkApp.java  KafkaParams.java  MyMongoClient.java  ProcessFileBeats.java  ProcessMetricBeats.java
sparkstream/src/test/java/com/bdp/: AppTest.java
