[tool.poetry]
name = "bdp"
version = "0.1.0"
description = ""
authors = ["wa101 <wadhah.mahroug15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
kafka-python = "^2.0.2"
isort = "^5.10.1"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
